client/src/pages/style.css
.main-header {
    font-size: 3.5rem;
    padding-left: 0;
}

.down-arrow {
    background-image: url("../images/down-arrow.png");
    background-repeat: no-repeat;
    height: 300px;
    width: 300px;
}

.typeform-widget {
    display: block;
    position: relative;
    height: 400px;
}

.account-page {
    border: 3px solid black;
    padding: 1rem;
    font-family: 'Lobster', cursive;
}

.border-box {
    border: 3px solid black;
    height: 81vh;
    width: 68.25%;
    background-color: white;
    padding-top: 5rem;
    font-family: 'Oswald', sans-serif;
}

.reset-box {
    border: 3px solid black;
    padding: 1rem;
}

.headline {
    font-family: 'Lobster', cursive;
    color: darkcyan;
}

.next-page {
    font-family: 'Lobster', cursive;
    padding: 2%;
    font-size: 1.5rem;
    margin-top: 16%;
    margin-left: 39%;
    margin-right: auto;
    cursor: pointer;
    background-color: black;
    border-radius: 0;
}

.column-style {
    position: relative;
    padding-left: 0;
    padding-right: 0;
}

#first-row {
    background-color: #ffffff;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3Cfilter id='a' x='-200%25' y='-200%25' width='400%25' height='400%25'%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='50'/%3E%3C/filter%3E%3C/defs%3E%3Cg fill='%2322736e'%3E%3Cpolygon points='-203 1800 -203 -900 397 450'/%3E%3Cpolygon points='1803 -900 1803 1800 1203 450'/%3E%3C/g%3E%3Cg fill='%2320b2aa' filter='url(%23a)'%3E%3Cpolygon points='-203 1581 -203 -681 300 450'/%3E%3Cpolygon points='1803 -681 1803 1581 1300 450'/%3E%3C/g%3E%3Cg fill='%231a3a37'%3E%3Cpolygon points='-203 1581 -203 -681 300 450'/%3E%3Cpolygon points='1803 -681 1803 1581 1300 450'/%3E%3C/g%3E%3Cg fill='%23000000'%3E%3Cpolygon points='-203 1356 -203 -456 200 450'/%3E%3Cpolygon points='1803 -456 1803 1356 1400 450'/%3E%3C/g%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: cover;
    height: 100vh;
}

#second-row {
    background-color: #ffffff;
    padding-top: 8.5rem;
    height: 100vh;
}

#third-row {
    background-color: #ffffff;
    padding-top: 8.5rem;
    height: 100vh;
}

#fourth-row {
    background-color: #ffffff;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23dbdbdb' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23b6b6b6' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23929292' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%236d6d6d' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23494949' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23242424' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23000000' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: cover;
    padding-top: 8.5rem;
    height: 100vh;
}

  .col-white-background {
      background-color: white;
      padding-top: 9rem;
      height: 100vh;
  }

  .col-white-background-dash {
    background-color: white;
}

.col-white-background-dash-2 {
    background-color: white;
}

#dashboard-bg {
    background-color: white;
}

#dashboard-box {
    margin-top: 8.5rem;
    padding: 2rem;
    width: 68.25%;
    margin-bottom: 5rem;
    height: 120vh;
    border: 3px solid black;
}

#survey-box {
    margin-top: 8.5rem;
    padding: 2rem;
    width: 68.25%;
    margin-bottom: 5rem;
    height: 80vh;
    border: 3px solid black;
}

/* Reveal */
.hvr-reveal {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
    overflow: hidden;
  }
  .hvr-reveal:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    border-color: #2098D1;
    border-style: solid;
    border-width: 0;
    -webkit-transition-property: border-width;
    transition-property: border-width;
    -webkit-transition-duration: 0.1s;
    transition-duration: 0.1s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
  }
  .hvr-reveal:hover:before, .hvr-reveal:focus:before, .hvr-reveal:active:before {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    border-width: 4px;
  }

  .works-btn {
      background-color: white;
  }

  /* Underline From Center */
.hvr-underline-from-center {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
    overflow: hidden;
  }
  .hvr-underline-from-center:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 51%;
    right: 51%;
    bottom: 0;
    background: darkcyan;
    height: 4px;
    -webkit-transition-property: left, right;
    transition-property: left, right;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
  }
  .hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
    left: 0;
    right: 0;
  }

  .first-headline {
    animation-duration: 3s;
  }

  .second-headline {
    animation-duration: 3s;
    animation-delay: 2s;
  }

  .giphy-match {
      width: 18rem;
      height: auto;
      margin-left: 8rem;
  }

  .card {
      border: none;
      padding-bottom: 0;
  }

  .card-body {
      padding-bottom: 0;
  }

  .iconic {
      font-size: 6rem;
  }

  .card-text {
      font-size: 1.5rem;
  }

  .card-subtext {
      font-family: Helvetica;
  }

  .content-row {
      margin-top: 5rem;
  }

  .our-coaches {
      font-size: 1.5rem;
      margin-top: 2rem;
  }

  .coach-text {
    font-family: Helvetica;
    font-size: 1rem;
  }

  .userone {
    animation-duration: 6s;
    animation-delay: 4s;
  }

  .row-border {
    border-bottom: 1px solid rgba(0,0,0,.125)
  }

  .name-cyan {
      color: darkcyan;
      font-size: 2.5rem;
  }
  .usertwo {
    animation-duration: 6s;
    animation-delay: 5s;
  }

  .userthree {
    animation-duration: 6s;
    animation-delay: 6s;
  }

  .userfour {
    animation-duration: 6s;
    animation-delay: 7s;
  }

  .userfive {
    animation-duration: 6s;
    animation-delay: 7s;
  }

  .fourth-link {
      font-size: 1.5rem;
  }

  .gather-matches-link {
      font-size: 1.3rem;
  }

.fourth-col {
    padding-top: 4rem;
    padding-right: 8rem;
}

.typeform-widget {
    height: 32rem;
}

.appt-style {
    background-color: darkcyan;
    height: 75%;
    padding: .5rem;
    margin: .7rem;
}

.appt-text {
    font-size: 1.25rem;
}

.rocket {
    animation-duration: 4s;
    /* animation-delay: 2s; */
}

